140字での要約

--- a/10.データベースに対するテスト.md
+++ b/10.データベースに対するテスト.md
@@ -3,7 +3,7 @@
 - 状態ベース
   - データベース同士を比較する
 - 移行ベース
-  - TODO　？？
+  - 変更のscriptを適用する
 - 本番環境にデータベースの変更を反映する場合は、移行ベースを選択する
   - データモーションの重要
 - 単位作業（unit of work）パターンを採用する
