第2部の要約

--- a/要約.md
+++ b/要約.md
@@ -1,5 +1,4 @@
 ## Ⅰ. 単体テストとは
-T.B.D
 単体テストの目的はプロジェクトの成長を持続可能にすることであり、  
 そのためには良質なテストケースが必要である。
 
@@ -39,8 +38,12 @@ T.B.D
 読みやすさのために、各フェーズの区切り、メソッド名に留意する。
 
 ## Ⅱ. 単体テストとその価値
-単体テストのリファクタリング
-TODO 
+リファクタリングへの耐性、迅速なフィードバック、保守のしやすさを備えた
+出力値ベースの ドメインモデル、アルゴリズムの単体テストが最も価値が高い。
+
+過度に複雑なコードはリファクタリングでドメインモデル/アルゴリズムとそれ以外に分割し、
+ドメインモデル/アルゴリズムのテストの価値を高める。
+
 
 ### 4. 良い単体テストを構成する4本の柱
 良い単体テストを構成する柱は次の4性質である
