第3部の要約

--- a/要約.md
+++ b/要約.md
@@ -81,7 +81,12 @@
 
 
 ## Ⅲ. 統合テスト
-TODO
+統合テストでは外部システムとの統合、  
+コントローラーに分類されるコードのテストを行う。
+プロセス外依存に対してのみモックを使用する。
+データベースを扱う場合は、テスト内でスキーマ、データを準備する.
+E2Eテストではモックは使用せず、クライアントの観点でのテストを行う。
+
 
 ### 8. なぜ統合テストを行うのか
 統合テストでは
