--- a/要約.md
+++ b/要約.md
@@ -1,6 +1,6 @@
 ## Ⅰ. 単体テストとは
 単体テストの目的はプロジェクトの成長を持続可能にすることであり、  
-そのためには良質なテストケースが必要である。
+そのためには良質なテストが必要である。
 
 良質な単体テストは  
 読みやすさ、保守しやすさ、リファクタリングのしやすさを備えている。
