--- a/要約.md
+++ b/要約.md
@@ -84,7 +84,7 @@
 
 ## Ⅲ. 統合テスト
 外部システムと統合したときに想定通りに機能することを検証するために、統合テストを行う.  
-統合テストではシナリオごとに1件のハッピーパスを検証することで,  
+統合テストではビジネスシナリオごとに1件のハッピーパスを検証することで,  
 管理下にある依存とのコミュニケーション, コントーローラーのテストを行う.  
 統合テストでデータベースを直接利用することで, 退行に対する保護を得られる.  
 
