3部の要約の修正

--- a/要約.md
+++ b/要約.md
@@ -84,9 +84,10 @@
 
 ## Ⅲ. 統合テスト
 外部システムと統合したときに想定通りに機能することを検証するために、統合テストを行う.  
-統合テストではビジネスシナリオごとに1件のハッピーパスを検証することで,  
-管理下にある依存とのコミュニケーション, コントーローラーのテストを行う.  
-統合テストでデータベースを直接利用することで, 退行に対する保護を得られる.  
+統合テストではビジネスシナリオごとに1件のハッピーパスを検証する.    
+退行に対する保護を得るため、管理下にあるプロセス外の依存(データベース等)は直接利用し,  
+管理下の依存とのコミュニケーション, コントーローラーのテストを行う.  
+
 
 ### 8. なぜ統合テストを行うのか
 統合テストはドメインモデルとプロセス外依存とを結合するコードをテストし, 
