リファクタリング過程を追記

--- a/リファクタリング例/2.ドメインモデルのリファクタリング.md
+++ b/リファクタリング例/2.ドメインモデルのリファクタリング.md
@@ -1,5 +1,22 @@
 # ドメインモデルのリファクタリング
 
+1. レンタル料金取得メソッドを抽出
+2. レンタル料金抽出メソッドを移動
+3. レンタル料金抽出メソッド名を変更
+4. レンタルポイント取得メソッドを抽出
+5. レンタルポイント取得メソッドを移動
+6. Rentalsクラスの導入
+7. レンタル料金とレンタルポイントの計算を分離
+8. レンタルポイント計算メソッドを抽出
+9. レンタルポイント計算メソッドをRentalsクラスに移動
+10. 料金計算メソッドを抽出
+11. 料金計算メソッドをRentalsクラスに移動
+12. Priceインターフェースの導入
+13. レンタルクラスのchargeメソッドからswitchを除去
+14. PriceTypeをMovieTypeに名前変更
+15. Pointインターフェースの導入
+16. rentalパッケージを作成
+
 リファクタリングの結果、`Customer`クラスから`Point`, `Price`, `Rentals` クラスにドメインロジックが移動されたので、  
 `CustomerTest`クラスはなくなり,
  - `NewReleasePointTest`
