クラス図作成

--- a/リファクタリングガイド/1.最初のモデル.md
+++ b/リファクタリングガイド/1.最初のモデル.md
@@ -20,3 +20,49 @@
 
 
 ### 最初のモデル
+```mermaid
+classDiagram
+    class Customer{
+        String name
+        List~Rental~ rentals
+        CustomerDataSource customerDataSource
+        RentalDataSource rentalDataSource
+        RentalTransfer rentalTransfer
+        +rentalMovies()
+        +addRental(Rental rental) bool
+        +rentalMovies()
+    }
+
+    class Rental {
+        int daysRental
+        Movie movie
+        +getDaysRented(): int
+        +getMovie(): Movie
+    }
+
+    class Movie {
+        PriceType priceType
+        String title
+        +getPriceType(): PriceType
+        +getTitle(): String
+    }
+
+    class PriceType {
+        CHILDREN
+        REGULAR
+        NEW_RELEASE
+    }
+
+PriceType <|-- Movie: use
+Rental <|-- Customer: use
+Movie <|-- Rental : use
+CustomerDataSource <|-- Customer
+RentalDataSource <|-- Customer
+RentalTransfer <|-- Customer
+
+ <<enum>> PriceType
+ <<datasource>> CustomerDataSource
+ <<datasource>> RentalDataSource
+ <<transfer>> RentalTransfer
+
+```
