クラス図修正

--- a/リファクタリングガイド/1. 最初のモデル.md
+++ b/リファクタリングガイド/1. 最初のモデル.md
@@ -53,12 +53,12 @@ classDiagram
         NEW_RELEASE
     }
 
-PriceType <|-- Movie: use
-Rental <|-- Customer: use
-Movie <|-- Rental : use
-CustomerDataSource <|-- Customer
-RentalDataSource <|-- Customer
-RentalTransfer <|-- Customer
+PriceType <-- Movie: use
+Rental <-- Customer: use
+Movie <-- Rental : use
+CustomerDataSource <-- Customer
+RentalDataSource <-- Customer
+RentalTransfer <-- Customer
 
  <<enum>> PriceType
  <<datasource>> CustomerDataSource
