--- a/リファクタリングガイド/4.2 料金算出メソッド移動後のクラス図.md
+++ b/リファクタリングガイド/4.2 料金算出メソッド移動後のクラス図.md
@@ -42,12 +42,12 @@ classDiagram
         int frequentRenterPoints
     }
 
-PriceType <|-- Movie: use
-Rental <|-- Customer: use
-Movie <|-- Rental : use
-CustomerDataSource <|-- CustomerService
-RentalDataSource <|-- CustomerService
-RentalTransfer <|-- CustomerService
+PriceType <-- Movie: use
+Rental <-- Customer: use
+Movie <-- Rental : use
+CustomerDataSource <-- CustomerService
+RentalDataSource <-- CustomerService
+RentalTransfer <-- CustomerService
 
  <<enum>> PriceType
  <<datasource>> CustomerDataSource
