--- a/リファクタリングガイド/9.1 合計算出メソッドの移動後のクラス図.md
+++ b/リファクタリングガイド/9.1 合計算出メソッドの移動後のクラス図.md
@@ -50,13 +50,13 @@ classDiagram
         +totalFrequentRenterPoints(): int
     }
 
-PriceType <|-- Movie: use
-Rentals <|-- Customer: use
-Movie <|-- Rental : use
+PriceType <-- Movie: use
+Rentals <-- Customer: use
+Movie <-- Rental : use
 Rental --o Rentals
-CustomerDataSource <|-- CustomerService
-RentalDataSource <|-- CustomerService
-RentalTransfer <|-- CustomerService
+CustomerDataSource <-- CustomerService
+RentalDataSource <-- CustomerService
+RentalTransfer <-- CustomerService
 
  <<enum>> PriceType
  <<datasource>> CustomerDataSource
