--- a/リファクタリングガイド/7.1 Rentalsクラスの導入後のクラス図.md
+++ b/リファクタリングガイド/7.1 Rentalsクラスの導入後のクラス図.md
@@ -47,14 +47,14 @@ classDiagram
         +addRental(Rental rental)
     }
 
-PriceType <|-- Movie: use
-Rental <|-- Customer: use
-Rentals <|-- Customer: use
-Movie <|-- Rental : use
+PriceType <-- Movie: use
+Rental <-- Customer: use
+Rentals <-- Customer: use
+Movie <-- Rental : use
 Rental --o Rentals
-CustomerDataSource <|-- CustomerService
-RentalDataSource <|-- CustomerService
-RentalTransfer <|-- CustomerService
+CustomerDataSource <-- CustomerService
+RentalDataSource <-- CustomerService
+RentalTransfer <-- CustomerService
 
  <<enum>> PriceType
  <<datasource>> CustomerDataSource
