--- a/リファクタリングガイド/7. Rentalsクラスの導入.md
+++ b/リファクタリングガイド/7. Rentalsクラスの導入.md
@@ -1,4 +1,4 @@
-#　Rentalsクラスの導入.md
+# Rentalsクラスの導入
 
 RentalのListを保持するクラスを作成し、作成したクラス内でコレクションの操作を行うよう変更します。
 rentalパッケージを作成し、Rental, Rentalsをrentalパッケージに移動します。
