--- a/リファクタリングガイド/7. Rentalsクラスの導入.md
+++ b/リファクタリングガイド/7. Rentalsクラスの導入.md
@@ -1,6 +1,6 @@
 # Rentalsクラスの導入
 
-RentalのListを保持するクラスを作成し、作成したクラス内でコレクションの操作を行うよう変更します。
+`Rental`のListを保持するクラスを作成し、作成したクラス内でコレクションの操作を行うよう変更します。
 rentalパッケージを作成し、Rental, Rentalsをrentalパッケージに移動します。
 
 Rentals.java
@@ -62,4 +62,5 @@ public class Customer {
     }
 }
 ```
-
+差分  
+https://github.com/stgctkm/UnitTesting/pull/7/files
