--- a/リファクタリングガイド/10.1 料金計算メソッドを種類ごとに作成.md
+++ b/リファクタリングガイド/10.1 料金計算メソッドを種類ごとに作成.md
@@ -87,13 +87,10 @@ public class Rental {
 ```
 
 RegularPrice.java
-```
+```java
 package video.domain.rental;
 
 public class RegularPrice {
-    public RegularPrice() {
-    }
-
     double regularAmount(int daysRented) {
         if (daysRented <= 2) return 2.0;
         return 2 + (daysRented - 2) * 1.5;
@@ -102,13 +99,10 @@ public class RegularPrice {
 ```
 
 NewRelease.java
-```
+```java
 package video.domain.rental;
 
 public class newReleasePrice {
-    public newReleasePrice() {
-    }
-
     double newReleaseAmount(int daysRented) {
         return daysRented * 3;
     }
@@ -120,9 +114,6 @@ ChildrenPrice.java
 package video.domain.rental;
 
 public class ChildrenPrice {
-    public ChildrenPrice() {
-    }
-
     double childrenAmount(int daysRented) {
         if (daysRented <= 3) return 1.5;
         return 1.5 + (daysRented - 3) * 1.5;
