--- a/リファクタリングガイド/2. プロセス外依存をドメインから除去.md
+++ b/リファクタリングガイド/2. プロセス外依存をドメインから除去.md
@@ -96,4 +96,5 @@ public record RentalResult(
 ```
 
 差分
-https://github.com/stgctkm/UnitTesting/pull/1/files
+[プロセス外依存をドメインから除去](https://github.com/stgctkm/UnitTesting/pull/1/files)
+
