--- a/リファクタリングガイド/2.1 プロセス外依存をドメインから除去後のクラス図.md
+++ b/リファクタリングガイド/2.1 プロセス外依存をドメインから除去後のクラス図.md
@@ -37,12 +37,12 @@ classDiagram
         +rentalMovies(Customer customer)
     }
 
-PriceType <|-- Movie: use
-Rental <|-- Customer: use
-Movie <|-- Rental : use
-CustomerDataSource <|-- CustomerService
-RentalDataSource <|-- CustomerService
-RentalTransfer <|-- CustomerService
+PriceType <-- Movie: use
+Rental <-- Customer: use
+Movie <-- Rental : use
+CustomerDataSource <-- CustomerService
+RentalDataSource <-- CustomerService
+RentalTransfer <-- CustomerService
 
  <<enum>> PriceType
  <<datasource>> CustomerDataSource
