--- a/リファクタリングガイド/2.2 テストクラス.md
+++ b/リファクタリングガイド/2.2 テストクラス.md
@@ -1,5 +1,6 @@
 # テストクラス
 
+## Customerクラス
 Customerクラスはプロセス外依存のDatasourceクラスを除外し、
 レンタル結果を返却するようになったため、
 CustomerTestクラス**出力値ベース**のテストに変わりました。
@@ -121,8 +122,9 @@ class CustomerTest {
 }
 ```
 
+## CustomerServiceクラス
 コントローラーのテストはビジネスシナリオが正常に終わる実行経路をテストします。
-
+(管理下にあるプロセス外依存のテストを含みます)
 
 CustomerServiceTest.java
 ```java
