--- a/リファクタリングガイド/3. 料金メソッドの抽出.md
+++ b/リファクタリングガイド/3. 料金メソッドの抽出.md
@@ -63,4 +63,4 @@ public class Customer {
 ```
 
 差分
-https://github.com/stgctkm/UnitTesting/pull/2/files
+[料金メソッドの抽出](https://github.com/stgctkm/UnitTesting/pull/2/files)
