--- a/リファクタリングガイド/5. レンタルポイント算出メソッドの抽出.md
+++ b/リファクタリングガイド/5. レンタルポイント算出メソッドの抽出.md
@@ -1,5 +1,7 @@
 # レンタルポイント算出メソッドの抽出
 
+レンタル料金を算出するメソッドを抽出します。
+
 Customer.java
 ```java
 public class Customer {
@@ -44,4 +46,4 @@ public class Customer {
 ```
 
 差分
-https://github.com/stgctkm/UnitTesting/pull/4/files
+[レンタルポイント算出メソッドの抽出](https://github.com/stgctkm/UnitTesting/pull/4/files)
