--- a/リファクタリングガイド/6. レンタルポイント算出クラスの移動.md
+++ b/リファクタリングガイド/6. レンタルポイント算出クラスの移動.md
@@ -88,4 +88,4 @@ public class Customer {
 ```
 
 差分  
-https://github.com/stgctkm/UnitTesting/pull/5/files
+[レンタルポイント算出メソッドの移動](https://github.com/stgctkm/UnitTesting/pull/5/files)
