--- a/リファクタリングガイド/6.1 レンタルポイント算出メソッド移動後のテスト.md
+++ b/リファクタリングガイド/6.1 レンタルポイント算出メソッド移動後のテスト.md
@@ -1,5 +1,7 @@
 # レンタルポイント算出メソッド移動後のテスト
 
+作品の種類の組み合わせのテストはなく、各種類でレンタル日数を組み合わせたテストケースを作成します。
+
 RentalTest.java
 
 ```java
@@ -106,4 +108,4 @@ class RentalTest {
 }
 ```
 差分  
-https://github.com/stgctkm/UnitTesting/pull/6/files
+[レンタルポイント算出メソッドのテスト](https://github.com/stgctkm/UnitTesting/pull/6/files)
