--- a/リファクタリングガイド/7. Rentalsクラスの導入.md
+++ b/リファクタリングガイド/7. Rentalsクラスの導入.md
@@ -63,4 +63,4 @@ public class Customer {
 }
 ```
 差分  
-https://github.com/stgctkm/UnitTesting/pull/7/files
+[Rentalsクラスの導入](https://github.com/stgctkm/UnitTesting/pull/7/files)
