--- a/リファクタリングガイド/8. 合計金額算出メソッドの抽出.md
+++ b/リファクタリングガイド/8. 合計金額算出メソッドの抽出.md
@@ -130,4 +130,4 @@ public class Customer {
 ```
 
 差分  
-https://github.com/stgctkm/UnitTesting/pull/8/files
+[合計金額、合計レンタルポイント算出メソッドの抽出](https://github.com/stgctkm/UnitTesting/pull/8/files)
