--- a/リファクタリングガイド/9. 合計算出メソッドの移動.md
+++ b/リファクタリングガイド/9. 合計算出メソッドの移動.md
@@ -69,4 +69,4 @@ public class Customer {
 ```
 
 差分  
-https://github.com/stgctkm/UnitTesting/pull/9/files
+[合計金額算出メソッド、合計レンタルポイント算出メソッドをRentalsクラスに移動](https://github.com/stgctkm/UnitTesting/pull/9/files)
