--- a/リファクタリングガイド/9.2 合計算出メソッド移動後のテスト.md
+++ b/リファクタリングガイド/9.2 合計算出メソッド移動後のテスト.md
@@ -80,4 +80,4 @@ class CustomerTest {
 
 
 差分  
-https://github.com/stgctkm/UnitTesting/pull/10/files
+[合計金額、合計レンタルポイントのテスト](https://github.com/stgctkm/UnitTesting/pull/10/files)
