--- a/リファクタリングガイド/10. 再代入を避ける.md
+++ b/リファクタリングガイド/10. 再代入を避ける.md
@@ -1,7 +1,7 @@
 # 再代入を避ける
 
 
-Rentalクラスの料金計算メソッドの再代入を除外します
+Rentalクラスの料金計算メソッドの再代入を除去します
 
 ```java
 public double amount() {
@@ -44,4 +44,4 @@ public double amount() {
 ```
 
 差分  
-https://github.com/stgctkm/UnitTesting/pull/11/files
+[再代入を避ける](https://github.com/stgctkm/UnitTesting/pull/11/files)
