--- a/リファクタリングガイド/10.1 料金計算メソッドを種類ごとに作成.md
+++ b/リファクタリングガイド/10.1 料金計算メソッドを種類ごとに作成.md
@@ -2,9 +2,10 @@
 
 switch文を削除するために、インターフェースを導入し、作品種類ごとに料金計算を保持するよう変更します。
 
-https://pleiades.io/help/idea/replace-conditional-logic-with-strategy-pattern.html
+[参考](https://pleiades.io/help/idea/replace-conditional-logic-with-strategy-pattern.html)
 
-`Rental`クラスの作品種類ごとの料金計算のメソッドを抽出します.
+## 料金計算メソッドの抽出
+`Rental`クラスの作品種類ごとの料金計算のメソッドを抽出します.  
 メソッドは移譲することになるので、一時的変数 daysRented を導入し、Rentalクラスのメソッドを直接使用しないようにします。(相互参照にならないように)
 
 ```java
@@ -36,7 +37,9 @@ https://pleiades.io/help/idea/replace-conditional-logic-with-strategy-pattern.ht
     }
 ```
 
-抽出したメソッドをそれぞれクラスを作成して委譲します。
+## 委譲
+抽出したメソッドをそれぞれクラスを作成して委譲します。  
+
 Rental.java
 ```java
 package video.domain.rental;
@@ -121,5 +124,5 @@ public class ChildrenPrice {
 }
 ```
 
-
-[差分](https://github.com/stgctkm/UnitTesting/pull/12/files)https://github.com/stgctkm/UnitTesting/pull/12/files
+差分
+[料金計算メソッドを区分ごとに作成](https://github.com/stgctkm/UnitTesting/pull/12/files)
