--- a/リファクタリングガイド/10.2 料金インターフェースの導入.md
+++ b/リファクタリングガイド/10.2 料金インターフェースの導入.md
@@ -46,6 +46,6 @@ public class ChildrenPrice implements Price {
     }
 }
 ```
-
-[差分](https://github.com/stgctkm/UnitTesting/pull/13/files)https://github.com/stgctkm/UnitTesting/pull/13/files
+差分  
+[料金インターフェースを導入](https://github.com/stgctkm/UnitTesting/pull/13/files)
 
