--- a/リファクタリングガイド/10.3 料金計算メソッドのmovieクラスへの移動.md
+++ b/リファクタリングガイド/10.3 料金計算メソッドのmovieクラスへの移動.md
@@ -1,5 +1,99 @@
 # 料金計算メソッドのmovieクラスへの移動
 
+料金計算メソッドは`Rental`クラスのフィールドではmovieのみを使用しているので、
+`Movie`クラスに移動します
 
 
-[差分](https://github.com/stgctkm/UnitTesting/pull/15/files)https://github.com/stgctkm/UnitTesting/pull/15/files
+Movie.java
+```java
+package video.domain;
+
+import video.domain.price.ChildrenPrice;
+import video.domain.price.NewReleasePrice;
+import video.domain.price.RegularPrice;
+
+public class Movie {
+
+    private String title;
+    PriceType priceType;
+
+    private final RegularPrice regularPrice = new RegularPrice();
+    private final NewReleasePrice newReleasePrice = new NewReleasePrice();
+    private final ChildrenPrice childrenPrice = new ChildrenPrice();
+
+    public Movie(String title, PriceType priceType) {
+        this.title = title;
+        this.priceType = priceType;
+    }
+
+    public PriceType getPriceType() {
+        return priceType;
+    }
+
+    public void setPriceType(PriceType priceType) {
+        this.priceType = priceType;
+    }
+
+    public String getTitle() {
+        return title;
+    }
+
+    public int amount(int daysRented) {
+        switch (priceType) {
+            case REGULAR:
+                return regularPrice.amount(daysRented);
+            case NEW_RELEASE:
+                return newReleasePrice.amount(daysRented);
+            case CHILDREN:
+                return childrenPrice.amount(daysRented);
+            default:
+                throw new RuntimeException("ビデオの区分が誤っています");
+        }
+    }
+}
+
+```
+
+Rental.java
+
+```java
+package video.domain.rental;
+
+import video.domain.Movie;
+import video.domain.PriceType;
+
+public class Rental {
+
+    private Movie movie;
+    private int daysRented;
+
+    public Rental(Movie movie, int daysRented) {
+        this.movie = movie;
+        this.daysRented = daysRented;
+    }
+
+    public int getDaysRented() {
+        return daysRented;
+    }
+
+    public Movie getMovie() {
+        return movie;
+    }
+
+    public int amount() {
+        // 金額を計算
+        int daysRented = getDaysRented();
+        return movie.amount(daysRented);
+    }
+
+    public int frequentRenterPoints() {
+        // 新作を二日以上借りた場合はボーナスポイント
+        if ((getMovie().getPriceType() == PriceType.NEW_RELEASE) &&
+            getDaysRented() > 1) return 2;
+        return 1;
+    }
+}
+```
+
+差分  
+[amountメソッドをmovieクラスに移動](https://github.com/stgctkm/UnitTesting/pull/15/files)
