--- a/リファクタリングガイド/10.4 PriceTypeのpriceを利用.md
+++ b/リファクタリングガイド/10.4 PriceTypeのpriceを利用.md
@@ -1,3 +1,75 @@
-#
+# PriceTypeに料金メソッドを委譲
 
-[差分](https://github.com/stgctkm/UnitTesting/pull/17/files)https://github.com/stgctkm/UnitTesting/pull/17/files
+料金はフィールドの`PriceType`とレンタル日数（引数）で決まるので`PriceType`に処理を委譲する.
+
+PriceType.java
+
+```java
+package video.domain;
+
+import video.domain.price.ChildrenPrice;
+import video.domain.price.NewReleasePrice;
+import video.domain.price.RegularPrice;
+
+public enum PriceType {
+    CHILDREN,
+    REGULAR,
+    NEW_RELEASE;
+
+    private final RegularPrice regularPrice = new RegularPrice();
+    private final NewReleasePrice newReleasePrice = new NewReleasePrice();
+    private final ChildrenPrice childrenPrice = new ChildrenPrice();
+
+    int amount(int daysRented) {
+        switch (this) {
+            case REGULAR:
+                return regularPrice.amount(daysRented);
+            case NEW_RELEASE:
+                return newReleasePrice.amount(daysRented);
+            case CHILDREN:
+                return childrenPrice.amount(daysRented);
+            default:
+                throw new RuntimeException("ビデオの区分が誤っています");
+        }
+    }
+}
+
+```
+
+
+Movie.java
+```java
+package video.domain;
+
+public class Movie {
+
+    private String title;
+    PriceType priceType;
+
+
+    public Movie(String title, PriceType priceType) {
+        this.title = title;
+        this.priceType = priceType;
+    }
+
+    public PriceType getPriceType() {
+        return priceType;
+    }
+
+    public void setPriceType(PriceType priceType) {
+        this.priceType = priceType;
+    }
+
+    public String getTitle() {
+        return title;
+    }
+
+    public int movieAmount(int daysRented) {
+        return priceType.amount(daysRented);
+    }
+
+}
+```
+
+差分  
+[PriceTypeにメソッドを移動](https://github.com/stgctkm/UnitTesting/pull/17/files)
