--- a/リファクタリングガイド/11.1 レンタルポイントのリファクタリング.md
+++ b/リファクタリングガイド/11.1 レンタルポイントのリファクタリング.md
@@ -1,4 +1,162 @@
-#
+# レンタルポイント算出メソッドを抽出、PriceTypeに委譲
 
 
-[差分](https://github.com/stgctkm/UnitTesting/pull/18/files)https://github.com/stgctkm/UnitTesting/pull/18/files
+Movie.java
+```java
+package video.domain;
+
+public class Movie {
+
+    private String title;
+    PriceType priceType;
+
+
+    public Movie(String title, PriceType priceType) {
+        this.title = title;
+        this.priceType = priceType;
+    }
+
+    public PriceType getPriceType() {
+        return priceType;
+    }
+
+    public void setPriceType(PriceType priceType) {
+        this.priceType = priceType;
+    }
+
+    public String getTitle() {
+        return title;
+    }
+
+    public int amount(int daysRented) {
+        return priceType.amount(daysRented);
+    }
+
+    public int frequentRenterPoints(int daysRented) {
+        return priceType.frequentRenterPoints(daysRented);
+    }
+}
+```
+
+PriceType.java
+```java
+package video.domain;
+
+import video.domain.point.ChildrenPoint;
+import video.domain.point.NewReleasePoint;
+import video.domain.point.Point;
+import video.domain.point.RegularPoint;
+import video.domain.price.ChildrenPrice;
+import video.domain.price.NewReleasePrice;
+import video.domain.price.Price;
+import video.domain.price.RegularPrice;
+
+public enum PriceType {
+    CHILDREN(new ChildrenPrice(), new ChildrenPoint()),
+    REGULAR(new RegularPrice(), new RegularPoint()),
+    NEW_RELEASE(new NewReleasePrice(), new NewReleasePoint());
+
+    Price price;
+    Point point;
+
+    PriceType(Price price, Point point) {
+        this.price = price;
+        this.point = point;
+    }
+
+    int amount(int daysRented) {
+        return price.amount(daysRented);
+    }
+
+    public int frequentRenterPoints(int daysRented) {
+        return point.frequentRenterPoints(daysRented);
+    }
+}
+```
+
+ChildrenPoint.java
+```java
+package video.domain.point;
+
+public class ChildrenPoint implements Point {
+    @Override
+    public int frequentRenterPoints(int daysRented) {
+        return 1;
+    }
+}
+```
+
+NewReleasePoint.java
+```java
+package video.domain.point;
+
+public class NewReleasePoint implements Point {
+    @Override
+    public int frequentRenterPoints(int daysRented) {
+        // 新作を二日以上借りた場合はボーナスポイント
+        if (daysRented > 1) return 2;
+        return 1;
+    }
+}
+```
+
+RegularPoint.java
+```java
+
+package video.domain.point;
+
+public class RegularPoint implements Point {
+    @Override
+    public int frequentRenterPoints(int daysRented) {
+        return 1;
+    }
+}
+```
+
+Point.java
+```java
+package video.domain.point;
+
+public interface Point {
+    int frequentRenterPoints(int daysRented);
+}
+```
+
+Rental.java
+```java
+package video.domain.rental;
+
+import video.domain.Movie;
+
+public class Rental {
+
+    private Movie movie;
+    private int daysRented;
+
+    public Rental(Movie movie, int daysRented) {
+        this.movie = movie;
+        this.daysRented = daysRented;
+    }
+
+    public int getDaysRented() {
+        return daysRented;
+    }
+
+    public Movie getMovie() {
+        return movie;
+    }
+
+    public int amount() {
+        // 金額を計算
+        int daysRented = getDaysRented();
+        return movie.amount(daysRented);
+    }
+
+    public int frequentRenterPoints() {
+        return movie.frequentRenterPoints(daysRented);
+    }
+}
+```
+
+差分  
+[レンタルポイント算出をリファクタリング](https://github.com/stgctkm/UnitTesting/pull/18/files)
