--- a/リファクタリングガイド/11.2 レンタルポイントのテスト.md
+++ b/リファクタリングガイド/11.2 レンタルポイントのテスト.md
@@ -1,3 +1,32 @@
-#
+# レンタルポイントのテスト
 
-[差分](https://github.com/stgctkm/UnitTesting/pull/19/files)https://github.com/stgctkm/UnitTesting/pull/19/files
+新作レンタルの場合にポイント付与に条件があるので、テストを作成する
+
+
+NewReleasePointTest.java
+```java
+package video.domain.point;
+
+import org.junit.jupiter.api.Test;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+
+class NewReleasePointTest {
+    @Test
+    void 新作を1日レンタルするポイント() {
+        NewReleasePoint sut = new NewReleasePoint();
+        assertEquals(1, sut.frequentRenterPoints(1));
+    }
+
+    @Test
+    void 新作を2日レンタルするポイント() {
+        NewReleasePoint sut = new NewReleasePoint();
+        assertEquals(2, sut.frequentRenterPoints(2));
+    }
+}
+```
+
+
+
+差分  
+[レンタルポイント算出のテスト](https://github.com/stgctkm/UnitTesting/pull/19/files)
