--- a/リファクタリングガイド/12. パッケージ、名前のリファクタリング.md
+++ b/リファクタリングガイド/12. パッケージ、名前のリファクタリング.md
@@ -1,3 +1,10 @@
-# 
+# パッケージ、名前のリファクタリング
 
-[差分](https://github.com/stgctkm/UnitTesting/pull/20/files)https://github.com/stgctkm/UnitTesting/pull/20/files
+`PriceType` は料金とレンタルポイントの役割を持っているので、`MovieType`に変更する。  
+
+
+
+
+
+差分  
+[rename PriceType to MovieType](https://github.com/stgctkm/UnitTesting/pull/20/files)
