--- a/リファクタリングガイド/11.3 レンタルポイントのリファクタリングのクラス図.md
+++ b/リファクタリングガイド/11.3 レンタルポイントのリファクタリングのクラス図.md
@@ -94,6 +94,8 @@ Rental --o Rentals
 CustomerDataSource <-- CustomerService
 RentalDataSource <-- CustomerService
 RentalTransfer <-- CustomerService
+Customer <-- CustomerService
+RentalResult <-- CustomerService
 
 <<enum>> PriceType
 <<interface>> Point
